fixed mobile menu font color and spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .heroImage {
-  margin: 0;
+  margin: 0 0 40px 0;
   padding: 0;
   background-image: url(../images/hero.jpeg);
   background-size: cover;
@@ -56,5 +56,5 @@
 }
 p {
   width: 80vw;
-  margin: auto;
+  margin: 0 auto;
 }
