--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h1 {
 }
 h2 {
   margin: 0;
-  padding: 30px 0 20px 0;
+  padding: 0;
   color: #ce1126;
   font-family: "Roboto Slab", serif;
   text-align: center;
@@ -34,13 +34,14 @@ h2 {
 }
 h3 {
   margin: 0;
-  padding: 30px 0 20px 0;
+  padding: 0;
   color: #ce1126;
   text-align: center;
   font-weight: 500;
   font-size: 40px;
 }
 p {
+  padding: 10px 0 20px 0;
   text-indent: 5vw;
   color: #000;
   font-weight: 300;
@@ -131,7 +132,7 @@ p a:hover {
   margin: 0px;
   padding: 25px 0 0 0;
   height: 50px;
-  color: #ce1126;
+  color: #000;
   font-size: 11vh;
   font-weight: 200;
   text-align: center;
@@ -146,13 +147,13 @@ p a:hover {
   cursor: pointer;
 }
 .mobileMenuLinks {
-  margin: 50px 0 0 0;
+  margin: 20px 0 0 0;
   padding: 0;
   list-style: none;
   text-align: center;
 }
 .mobileMenuLinks li a {
-  padding: 3.5vh;
+  padding: 3.3vh;
   display: block;
   color: black;
   font-size: 5vh;
@@ -249,7 +250,7 @@ footer img {
   }
   .footerBottom div ul li {
     font-size: 16px;
-    line-height: 32px;
+    line-height: 24px;
   }
 }
 @media screen and (min-width: 785px) {
